# RGR

./: .gitignore  CMakeLists.txt  README(2).md  README(3).md  README.md  README1.md  atbash.cpp  atbash.h  error_codes(1).h  error_codes.h  error_handler(1).cpp  error_handler(1).h  error_handler.cpp  error_handler.h  file_manager(!).h  file_manager(1).cpp  file_manager.cpp  file_manager.h  key_generator (1).cpp  key_generator (1).h  key_generator.cpp  key_generator.h  main(2).cpp  main.cpp  main1.cpp  vigenere.cpp  vigenere.h
Core/: CipherManager.cpp  FileProcessor.cpp  FileProcessor.h  ICipher.h
EncryptionAlgorithmRGR/Core/: CipherManager.h
EncryptionAlgorithmRGR/Plugins/VigenereCipher/: VigenereCipher.cpp
EncryptionAlgorithmRGR/UI/: ConsoleUI.cpp
Plugins/AtbashCipher/: AtbashCipher.cpp
Plugins/VigenereCipher/: VigenereCipher.cpp
Plugins/XORCipher/: XORCipher.cpp
UI/: ConsoleUI.cpp
